@@ -6,6 +6,9 @@
   * Adjusted Variable Mapping Blur Composition so user arguments actual
     relate properly to the sigma of the blur for a maximum mapping value.
   * Fix horizon anti-alising for output scaled perspective distortions.
+  * 'Bessel' filter is nor offically and more accuritally named 'Jinc'
+    however 'Bessel' while not visible as a filter option can still be used
+    as an internal alias for 'Jinc'.
 
 2010-09-28  6.6.4-8 Nicolas Robidoux <nicolas.robidoux@gmail...>
   * Chantal Racette double checked the bounding parallelogram computation
